# touist

./: .gitignore  .gitpod.yml  .merlin  .ocamlinit  .travis.yml  CHANGELOG  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS  CONTRIBUTORS.md  INSTALL.md  LICENSE  Makefile  README.md  _oasis  _opam  _tags  a.touist  appveyor.yml  build.xml  circle.yml  dune-project  myocamlbuild.ml  out.cnf  out.table  prepare_version.sh  setup.ml  touist  touist.install  touist.opam  touist.rb  touistjs.js
.circleci/: config.yml
.github/workflows/: ci.yml  dispatch.yml_unused  unit-test.yaml  win-install-yices2.sh
.tmp_for_modal_logic_s5/: README.txt
MiniSat/: Minisat.java  essai.cnf
ci/: appveyor-script.sh
compiler/: .gitignore  README.md  _oasis  _tags  myocamlbuild.ml  setup.ml
compiler/src/: ast.ml  cnf.ml  dimacs.ml  eval.ml  lexer.mll  parser.mly  tokens.ml  touistc.ml
compiler/test/: foo.touistl  latex.touistl  test.impl  test.touistl  test_lexer.ml
docs/: CONTRIBUTE-TO-DOCS.md  Makefile  bibliography.bib  grammar.json  ignores.dic  reference-manual.mdk  syntax-coloring-readme  touist.json
opam/: descr  findlib  opam
src/: HOWTODEBUG.md  META  dlpa.ml  dune  eval.ml  jbuild  lexer.mll  main.ml  parse.ml  parser.messages  solvesmt.ml  touist.cppo.ml  touist.ml  touist.mldylib  touist.odocl  touist_yices2.mldylib
src/cli/: touist.ml
src/js/: dune  jbuild  touistjs.js  touistjs.ml  touistjs_test.js
src/lib/: META  cnf.ml  cnf.mli  dlpa.ml  dummy.ml  dummy.mli  dune  err.ml  err.mli  eval.ml  eval.mli  jbuild  latex.ml  latex.mli  lexer.mll  modalLogic.ml  modalLogic.mli  msgs.ml  parse.ml  parse.mli  parser.messages  parser.mly  parserReport.ml  parser_error_report.ml  pprint.ml  pprint.mli  qbf.ml  qbf.mli  qbf_of_ast.ml  sat.ml  satSolve.ml  satSolve.mli  smt.ml  smt.mli  touist.mld  touist.mldylib  touist.mllib  touist.odocl  touistCnf.ml  touistCnf.mli  (+24 more)
src/lib/qbf/: dune  jbuild  qbfSolve.dummy.ml  qbfSolve.dummy.mli  qbfSolveDummy.ml  qbfSolveDummy.mli  qbfSolveReal.ml  qbfSolveReal.mli  solveqbf.ml  touistQbfSolveDummy.ml  touistQbfSolveDummy.mli  touistQbfSolveReal.ml  touistQbfSolveReal.mli  touist_qbf.mldylib  touist_qbf.mllib  touist_qbf.odocl
src/lib/qbf/depqbf/: touistDepqbfSolve.ml  touistDepqbfSolve.mli  touist_depqbf.mldylib
src/lib/yices2/: dune  jbuild  smtSolve.dummy.mli  smtSolveDummy.ml  smtSolveDummy.mli  smtSolveReal.ml  smtSolveReal.mli  solvesmt.ml  touistSmtSolve.ml  touistSmtSolveDummy.ml  touistSmtSolveDummy.mli  touistSmtSolveReal.ml  touistSmtSolveReal.mli  touist_yices2.odocl
src/solver_executables/modal_logic/: S5Cheetah
support/gitpod/: Dockerfile
support/gui/: .gitignore  INSTALL.md  README.md  build.gradle  build.sh  build.xml  settings.gradle
support/temporary-solver/: build.xml
temporary-solver/src/: Minisat.java
test/: dune  jbuild  sat_minisat_clause_add_unsat.t  sat_unittest_setgen.t  test.ml
test/examples.t/: run.t
test/qbf/: allumettes2.solution  allumettes2.touist
test/sat/: minisat_clause_add_unsat.touist  sudoku.touist  unittest_setgen.touistl
test/smt/: takuzu4x4_solution.txt
touist-gui/: INSTALL.md  README.md  Version.properties  build.xml  log.txt  out.table  test.smt2  test1.smt2
touist-gui/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
touist-gui/resources/: touistTheme.xml  version.properties
touist-gui/resources/lang/: en_US.properties  fr_FR.properties
touist-gui/ressources/: version.properties
touist-gui/ressources/help/: help.html  help.md  help.md.html
touist-gui/ressources/lang/: HowTo.txt  en_US.properties  fr_FR.properties
touist-gui/src/: ATIGraph.java  ActionRes.java  actionTotalementInstanciee.java  traduction.java
touist-gui/src/entity/: Literal.java  Model.java
touist-gui/src/gui/: AbstractComponentPanel.java  EditionMenuBar.java  LaTEX.java  Lang.java  LanguagesController.java  MainFrame.form  MainFrame.java  ResultsMenuBar.java  SolverSelection.java  State.java
touist-gui/src/pddl4t/: ATI.java  ATIGraph.java  ActionRes.java  Traduction.java  actionTotalementInstanciee.java
touist-gui/src/solution/: BaseDeClauses.java  ModelList.java  ModelListIterator.java  Solver.java  SolverExecutionException.java  SolverSMT.java  SolverTestSAT4J.java  TextInEditor.java
touist-gui/src/touist/: TouIST.java  TouistProperties.java
touist-gui/src/translation/: TranslationError.java  Translator.java  TranslatorSAT.java  TranslatorSMT.java
touist-translator/: .gitignore  .merlin  .ocamlinit  HOWTODEBUG.md  INSTALL.md  README.md  TopMakefile  _oasis  _tags  generate-version-number.sh  myocamlbuild.ml  setup.ml
touist-translator/src/: ErrorPrinters.ml  ErrorReporting.ml  TouistErrorReporting.ml  ast.ml  cnf.ml  dimacs.ml  eval.ml  exact.ml  latex.ml  lexer.mll  msg.ml  msgs.ml  parse.ml  parser.messages  parser.mly  parser_error_report.ml  parser_messages.ml  pprint.ml  sat.ml  set_ext.ml  set_ext.mli  smt.ml  syntax.ml  touist.mldylib  touist.mllib  touist.odocl  touistc.ml  translation.ml  types.ml
touist-translator/test/: foo.touistl  latex.touistl  sat_ex1.touistl  test.ml  test.touistl
touist-translator/test/real-size-tests/: sudoku_solution.txt
touist-translator/test/sat/: unittest_setgen_solution.txt
touist-translator/test/smt/: takuzu4x4.touistl
ui/: README.md
ui/Entity/: Literal.java  Model.java
ui/entity/: Literal.java  Model.java
ui/gui/: AbstractComponentPanel.java  LaTEX.java  MainFrame.java  State.java  StateV1.java
ui/gui/TranslatorLatex/: Lexi.java  TranslationLatex.java  parser.java  sym.java
ui/gui/editionView/: CustomTextArea.java  EditionPanel.form  InsertionButton.java  PalettePanel.java  (+4 more)
ui/solution/: BaseDeClauses.java  Gestionnaire.java  Model.java  ModelList.java  ModelListIterator.java  Models.java  ModelsIterator.java  NotSatisfiableException.java  Solver.java  SolverExecutionException.java  SolverSAT.java  SolverTestSAT4J.java
ui/touist/: TouIST.java
ui/translation/: ResultatOcaml.java  Traducteur.java  TranslationResult.java  TranslationResultSAT.java  Translator.java
(+124 files in other folders)
