opam-version: "1.2"
name: "touist"
version: "3.4.4"
maintainer: "Maël Valais <mael.valais@gmail.com>"
authors: [ "Maël Valais <mael.valais@gmail.com>" "Olivier Lezaud" ]
license: "MIT"
homepage: "https://www.irit.fr/touist"
dev-repo: "https://github.com/touist/touist.git"
bug-reports: "https://github.com/touist/touist/issues"
build: [
  ["jbuilder" "subst"] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
install: [["jbuilder" "install"]]
remove: [["jbuilder" "uninstall"]]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]
build-doc: [["jbuilder" "build" "@doc" "-j" jobs]]
depends: [
  "menhir" {>= "20151023"}
  "minisat" {build}
  "ocamlbuild" {build}
  "ocamlfind" {build}
  "ounit" {test}
  "jbuilder" {build}
  "re" {build}
]
depopts: [
  "qbf"
  "yices2"
]
conflicts: [
  "qbf" {< "0.1"}
  "yices2" {< "0.0.2"}
]
available: [ ocaml-version >= "4.01.0" ]
post-messages: [
"To install more solvers, see 'opam info touist'" {success}
"Built without yices2 (SMT solver)" {success & !yices2:installed}
"Built without qbf (QBF solver)" {success & !qbf:installed}

"Built with yices2 (SMT solver). See 'opam info touist' for license." {success & yices2:installed}
"Built with qbf (QBF solver)" {success & qbf:installed}
]
