opam-version: "1.2"
name: "touist"
version: "3.5.2"
maintainer: "Maël Valais <mael.valais@gmail.com>"
authors: [ "Maël Valais <mael.valais@gmail.com>" "Olivier Lezaud" ]
license: "MIT"
homepage: "https://www.irit.fr/touist"
dev-repo: "https://github.com/touist/touist.git"
bug-reports: "https://github.com/touist/touist/issues"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
install: [["dune" "install"]]
remove: [["dune" "uninstall"]]
build-test: [["dune" "runtest" "-p" name "-j" jobs]]
build-doc: [["dune" "build" "-p" name "-j" jobs]]
depends: [
  "dune" {build & >= "1.0"}
  "menhir" {>= "20151023"}
  "minisat"
  "re" {>= "1.7.2"}
  "cmdliner" {>= "0.9.8"}
  "ounit" {test}
  "odoc" {doc}
]
depopts: [
  "qbf"
  "yices2"
]
conflicts: [
  "qbf" {< "0.1"}
  "yices2" {< "0.0.2"}
]
available: [ ocaml-version >= "4.02.3" ]
post-messages: [
"To install more solvers, see 'opam info touist'" {success}
"Built without yices2 (SMT solver)" {success & !yices2:installed}
"Built without qbf (QBF solver)" {success & !qbf:installed}

"Built with yices2 (SMT solver). See 'opam info touist' for license." {success & yices2:installed}
"Built with qbf (QBF solver)" {success & qbf:installed}
]
