(rule
 (alias runtest)
 (deps
  (:< test.exe)
  (glob_files sat/*)
  (glob_files qbf/*)
  (glob_files smt/*))
 (action
  (run %{<})))

(executable
 (name test)
 (libraries touist touist.qbf touist.yices2 oUnit)
 (modes byte))

; https://dune.readthedocs.io/en/stable/tests.html#file-tests

(cram
 (applies_to :whole_subtree)
 (deps %{bin:touist}))
