(library
 (name touist_qbf)
 (public_name touist.qbf)
 (optional)
 ; Trick to have an optional dep on Qbf;
 ;     from mirage/ocaml-conduit (async/jbuild) 
 (modules qbfSolve)
 (libraries
  touist
  (select
   qbfSolve.ml
   from
   (qbf.quantor -> qbfSolve.real.ml)
   (!qbf.quantor -> qbfSolve.dummy.ml))
  (select
   qbfSolve.mli
   from
   (qbf.quantor -> qbfSolve.real.mli)
   (!qbf.quantor -> qbfSolve.dummy.mli)))
 (wrapped true))

(documentation)
