(library
 (name touist_yices2)
 (public_name touist.yices2)
 (optional)
 ; Trick to have an optional dep on Qbf;
 ;     from mirage/ocaml-conduit (async/jbuild) 
 (modules smtSolve)
 (libraries
  touist
  (select
   smtSolve.ml
   from
   (yices2 -> smtSolve.real.ml)
   (!yices2 -> smtSolve.dummy.ml))
  (select
   smtSolve.mli
   from
   (yices2 -> smtSolve.real.mli)
   (!yices2 -> smtSolve.dummy.mli)))
 (wrapped true))

(documentation)
